Add ability to pass custom env vars to deployments through Session CR (#156)
* Modify SessionSpec to accept env vars
* add utils to add env vars to deployment
* call new env var addition logic to LazySessionHandler
* add QoL dockerfile to not download all deps every time
* upd LaunchRequest schema to accomodate environment vars
* upd k8sutil launch session methods to accept LaunchRequest.Env
* upd RootResource to send envs
* add utility dockerfile for service
* pass in null for SessionResource 'launchSession's env
* add envvars it to both SessionStartRequest and LaunchRequest
* upd K8sUtils to use new EnvironemntVars
* upd SessionResource to pass on envvars
* Regenerate OpenAPI.json
* Regenerate common API
