# java/common/org.eclipse.theia.cloud.common/src/main/java/org/eclipse/theia/cloud/common/k8s/resource/SessionSpec.java
@@ -16,6 +16,9 @@
  ********************************************************************************/
 package org.eclipse.theia.cloud.common.k8s.resource;
 
+import java.util.List;
+import java.util.Map;
+
 import org.eclipse.theia.cloud.common.util.TheiaCloudError;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
@@ -25,7 +28,7 @@ import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
 @JsonDeserialize()
 public class SessionSpec implements UserScopedSpec {
 
-    public static final String API = "theia.cloud/v3beta";
+    public static final String API = "theia.cloud/v4beta";
     public static final String KIND = "Session";
     public static final String CRD_NAME = "sessions.theia.cloud";
 
@@ -53,6 +56,15 @@ public class SessionSpec implements UserScopedSpec {
     @JsonProperty("sessionSecret")
     private String sessionSecret;
 
+    @JsonProperty("envVars")
+    private Map<String, String> envVars;
+        
+    @JsonProperty("envVarsFromConfigMaps")
+    private List<String> envVarsFromConfigMaps;
+
+    @JsonProperty("envVarsFromSecrets")
+    private List<String> envVarsFromSecrets;
+
     public SessionSpec() {
     }
 
@@ -61,10 +73,32 @@ public class SessionSpec implements UserScopedSpec {
     }
 
     public SessionSpec(String name, String appDefinition, String user, String workspace) {
-	this.name = name;
-	this.appDefinition = appDefinition;
-	this.user = user;
-	this.workspace = workspace;
+        this(name, appDefinition, user, workspace, Map.of(), List.of(), List.of());
+    }
+    public SessionSpec(
+        String name, String appDefinition, String user, String workspace, Map<String, String> envVars
+    )  {
+        this(name, appDefinition, user, workspace, envVars, List.of(), List.of());
+    }
+
+    public SessionSpec(
+        String name, String appDefinition, String user, String workspace, 
+        Map<String, String> envVars, List<String> envVarsFromConfigMaps
+    ) { 
+        this(name, appDefinition, user, workspace, envVars, envVarsFromConfigMaps, List.of());
+    }
+
+    public SessionSpec(
+        String name, String appDefinition, String user, String workspace, 
+        Map<String, String> envVars, List<String> envVarsFromConfigMaps, List<String> envVarsFromSecrets
+    ) {
+        this.name = name;
+        this.appDefinition = appDefinition;
+        this.user = user;
+        this.workspace = workspace;
+        this.envVars = envVars;
+        this.envVarsFromConfigMaps = envVarsFromConfigMaps;
+        this.envVarsFromSecrets = envVarsFromSecrets;
     }
 
     public String getName() {
@@ -132,6 +166,17 @@ public class SessionSpec implements UserScopedSpec {
 	return workspace;
     }
 
+    public Map<String, String> getEnvVars() {
+        return envVars;
+    }
+
+    public List<String> getEnvVarsFromConfigMaps() {
+        return envVarsFromConfigMaps;
+    }
+    public List<String> getEnvVarsFromSecrets() {
+        return envVarsFromSecrets;
+    }
+
     @JsonIgnore
     public boolean isEphemeral() {
 	return isEphemeral(workspace);
@@ -177,6 +222,21 @@ public class SessionSpec implements UserScopedSpec {
 		return false;
 	} else if (!sessionSecret.equals(other.sessionSecret))
 	    return false;
+    if (envVars == null) {
+        if (other.envVars != null)
+        return false;
+    } else if (!envVars.equals(other.envVars))
+        return false;
+    if (envVarsFromConfigMaps == null) {
+        if (other.envVarsFromConfigMaps != null)
+        return false;
+    } else if (!envVarsFromConfigMaps.equals(other.envVarsFromConfigMaps))
+        return false;
+    if (envVarsFromSecrets == null) {
+        if (other.envVarsFromSecrets != null)
+        return false;
+    } else if (!envVarsFromSecrets.equals(other.envVarsFromSecrets))
+        return false;        
 	return true;
     }
 
